--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<!-- This website template was created by : Student's Diana Linville -->
+<!-- This website template was created by : Madelyn Hartman -->
 <html lang="en">
 
 <head>
   <title>Forward Fitness Club</title>
   <meta charset="utf-8">
 </head>
-
 <body>
   <!-- Use the header area for the website name or logo -->
   <header>
     <h1>Forward Fitness Club</h1>
+    <img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297"
   </header>
 
   <!-- Use the nav area to add hyperlinks to other pages within the website -->
